# dagpt_youtube

./: 1_📊_Chat_With_Your_Data.py  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: how_pandas_dataframe_agent_work.ipynb
pages/: 2_📈_Interactive_Visualization_Tool.py
src/: utils.py
src/logger/: base.py
src/models/: llms.py
